better form css

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -34,7 +34,9 @@ Reset_password
         }
 
         form {
-            background-color: #fff;
+            background: transparent;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(0, 0, 0, 0.2);
             padding: 25px 30px 15px 30px;
             border-radius: 8px;
             box-shadow: 10px 10px 15px rgba(0, 0, 1, 0.5);
@@ -80,8 +82,8 @@ Reset_password
 <body>
 <div class="container">
     <div>
-    <h1>Reset Password for<br>{{ username }}</h1>
     <form method="POST">
+            <h1>Reset Password for<br>{{ username }}</h1>
         <label for="password">New Password:</label>
         <input type="password" id="password" name="password" required>
         <br>
