--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -34,7 +34,9 @@ Forgot password
         }
 
         form {
-            background-color: #fff;
+            background: transparent;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(0, 0, 0, 0.2);
             padding: 25px 30px 15px 30px;
             border-radius: 8px;
             box-shadow: 10px 10px 15px rgba(0, 0, 1, 0.5);
@@ -79,8 +81,8 @@ Forgot password
 <body>
 <div class="container">
     <div>
-    <h1>Forgot Password</h1>
     <form method="POST">
+        <h1>Forgot Password</h1>
         <label for="email">Enter your email:</label>
         <input type="email" id="email" name="email" required> <br>
         <button type="submit">Submit</button>
