--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,9 @@ Login
         }
 
         form {
-            background-color: #fff;
+            background: transparent;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(0, 0, 0, 0.2);
             padding: 25px 30px 15px 30px;
             border-radius: 8px;
             box-shadow: 10px 10px 15px rgba(0, 0, 1, 0.5);
@@ -121,7 +123,6 @@ Login
 <body>
     <div class="container">
         <div>
-            <h1>Login</h1>
             <div class="flash-message">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                     {% for category, message in messages %}
@@ -130,6 +131,7 @@ Login
                 {% endwith %}
             </div>
             <form action="{{ url_for('login') }}" method="POST">
+                <h1>Login</h1>
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
