--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -33,7 +33,9 @@ Sign_up
         }
 
         form {
-            background-color: #fff;
+            background: transparent;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(0, 0, 0, 0.2);
             padding: 25px 30px 15px 30px;
             border-radius: 8px;
             box-shadow: 10px 10px 15px rgba(0, 0, 1, 0.5);
@@ -98,8 +100,8 @@ Sign_up
 <body>
     <div class="container">
         <div>
-            <h1>Sign Up</h1>
             <form method="POST">
+                <h1>Sign Up</h1>
                 <div class="form-group">
                     <label for="username">Username:</label>
                     <input type="text" id="username" name="username" required>
