--- a/templates/book_loan.html
+++ b/templates/book_loan.html
@@ -547,5 +547,9 @@ body {
 .btn-decrement:active, .btn-increment:active {
     transform: translateY(0);
 }
+
+img {
+    width:100px;
+}
 </style>
 {% endblock %}
